[tool.poetry]
name = "git-rewrite"
version = "0.2.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
dataclasses = { version = "^0.6", python = "~3.6" }

[tool.poetry.dev-dependencies]
pre-commit = "^1.17"
black = {version = "^18.3-alpha.0",allows-prereleases = true}
pytest = "^4.6"
bump2version = "^0.5.10"
prospector = {version = "^1.1",extras = ["with_everything"]}

[tool.poetry.scripts]
git-rewrite = 'git_rewrite:cli'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
