[tool.poetry]
name = "git-rewrite"
version = "0.2.1"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^1.7.3"
pytest-cov = "^2.11.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.0"
bump2version = "^0.5.10"
prospector = {version = "^1.1", extras = ["with_everything"]}
mypy = "^0.812"

[tool.poetry.scripts]
git-rewrite = 'git_rewrite:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 119
target-version = ['py38']

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra --verbose --showlocals --tb=short --cov=git_rewrite --cov-report term-missing"
testpaths = [
    "tests",
]
